Update 04 - Feature Engineering.ipynb

--- a/04 - Feature Engineering.ipynb
+++ b/04 - Feature Engineering.ipynb
@@ -64,29 +64,262 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "      <th>starttime</th>\n",
+       "      <th>stoptime</th>\n",
+       "      <th>start station id</th>\n",
+       "      <th>start station name</th>\n",
+       "      <th>start station latitude</th>\n",
+       "      <th>start station longitude</th>\n",
+       "      <th>end station id</th>\n",
+       "      <th>end station name</th>\n",
+       "      <th>end station latitude</th>\n",
+       "      <th>end station longitude</th>\n",
+       "      <th>bikeid</th>\n",
+       "      <th>usertype</th>\n",
+       "      <th>birth year</th>\n",
+       "      <th>gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>256</td>\n",
+       "      <td>2017-12-01 00:00:00</td>\n",
+       "      <td>2017-12-01 00:04:17</td>\n",
+       "      <td>324</td>\n",
+       "      <td>DeKalb Ave &amp; Hudson Ave</td>\n",
+       "      <td>40.689888</td>\n",
+       "      <td>-73.981013</td>\n",
+       "      <td>262</td>\n",
+       "      <td>Washington Park</td>\n",
+       "      <td>40.691782</td>\n",
+       "      <td>-73.973730</td>\n",
+       "      <td>18858</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1981.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>325</td>\n",
+       "      <td>2017-12-01 00:00:17</td>\n",
+       "      <td>2017-12-01 00:05:43</td>\n",
+       "      <td>470</td>\n",
+       "      <td>W 20 St &amp; 8 Ave</td>\n",
+       "      <td>40.743453</td>\n",
+       "      <td>-74.000040</td>\n",
+       "      <td>490</td>\n",
+       "      <td>8 Ave &amp; W 33 St</td>\n",
+       "      <td>40.751551</td>\n",
+       "      <td>-73.993934</td>\n",
+       "      <td>19306</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>967</td>\n",
+       "      <td>2017-12-01 00:00:19</td>\n",
+       "      <td>2017-12-01 00:16:26</td>\n",
+       "      <td>347</td>\n",
+       "      <td>Greenwich St &amp; W Houston St</td>\n",
+       "      <td>40.728846</td>\n",
+       "      <td>-74.008591</td>\n",
+       "      <td>504</td>\n",
+       "      <td>1 Ave &amp; E 16 St</td>\n",
+       "      <td>40.732219</td>\n",
+       "      <td>-73.981656</td>\n",
+       "      <td>28250</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1992.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>125</td>\n",
+       "      <td>2017-12-01 00:00:20</td>\n",
+       "      <td>2017-12-01 00:02:26</td>\n",
+       "      <td>3077</td>\n",
+       "      <td>Stagg St &amp; Union Ave</td>\n",
+       "      <td>40.708771</td>\n",
+       "      <td>-73.950953</td>\n",
+       "      <td>3454</td>\n",
+       "      <td>Leonard St &amp; Maujer St</td>\n",
+       "      <td>40.710369</td>\n",
+       "      <td>-73.947060</td>\n",
+       "      <td>25834</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1988.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>451</td>\n",
+       "      <td>2017-12-01 00:00:28</td>\n",
+       "      <td>2017-12-01 00:08:00</td>\n",
+       "      <td>368</td>\n",
+       "      <td>Carmine St &amp; 6 Ave</td>\n",
+       "      <td>40.730386</td>\n",
+       "      <td>-74.002150</td>\n",
+       "      <td>326</td>\n",
+       "      <td>E 11 St &amp; 1 Ave</td>\n",
+       "      <td>40.729538</td>\n",
+       "      <td>-73.984267</td>\n",
+       "      <td>14769</td>\n",
+       "      <td>Subscriber</td>\n",
+       "      <td>1986.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tripduration            starttime             stoptime  start station id  \\\n",
+       "0           256  2017-12-01 00:00:00  2017-12-01 00:04:17               324   \n",
+       "1           325  2017-12-01 00:00:17  2017-12-01 00:05:43               470   \n",
+       "2           967  2017-12-01 00:00:19  2017-12-01 00:16:26               347   \n",
+       "3           125  2017-12-01 00:00:20  2017-12-01 00:02:26              3077   \n",
+       "4           451  2017-12-01 00:00:28  2017-12-01 00:08:00               368   \n",
+       "\n",
+       "            start station name  start station latitude  \\\n",
+       "0      DeKalb Ave & Hudson Ave               40.689888   \n",
+       "1              W 20 St & 8 Ave               40.743453   \n",
+       "2  Greenwich St & W Houston St               40.728846   \n",
+       "3         Stagg St & Union Ave               40.708771   \n",
+       "4           Carmine St & 6 Ave               40.730386   \n",
+       "\n",
+       "   start station longitude  end station id        end station name  \\\n",
+       "0               -73.981013             262         Washington Park   \n",
+       "1               -74.000040             490         8 Ave & W 33 St   \n",
+       "2               -74.008591             504         1 Ave & E 16 St   \n",
+       "3               -73.950953            3454  Leonard St & Maujer St   \n",
+       "4               -74.002150             326         E 11 St & 1 Ave   \n",
+       "\n",
+       "   end station latitude  end station longitude  bikeid    usertype  \\\n",
+       "0             40.691782             -73.973730   18858  Subscriber   \n",
+       "1             40.751551             -73.993934   19306  Subscriber   \n",
+       "2             40.732219             -73.981656   28250  Subscriber   \n",
+       "3             40.710369             -73.947060   25834  Subscriber   \n",
+       "4             40.729538             -73.984267   14769  Subscriber   \n",
+       "\n",
+       "   birth year  gender  \n",
+       "0      1981.0       1  \n",
+       "1      1992.0       1  \n",
+       "2      1992.0       1  \n",
+       "3      1988.0       1  \n",
+       "4      1986.0       1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Reading the CSV File and loading it into a pandas dataframe\n",
-    "data = pd.read_csv('Dataset/201712-citibike-tripdata.csv')\n",
+    "data = pd.read_csv('data/201712-citibike-tripdata.csv')\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tripduration                 int64\n",
+       "starttime                   object\n",
+       "stoptime                    object\n",
+       "start station id             int64\n",
+       "start station name          object\n",
+       "start station latitude     float64\n",
+       "start station longitude    float64\n",
+       "end station id               int64\n",
+       "end station name            object\n",
+       "end station latitude       float64\n",
+       "end station longitude      float64\n",
+       "bikeid                       int64\n",
+       "usertype                    object\n",
+       "birth year                 float64\n",
+       "gender                       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data.dtypes"
+    "data.dtypes\n",
+    "\n",
+    "# if you have dates in your data, it's important to convert them to a datetime object so that we can\n",
+    "# do functions on them to extract information from them.\n",
+    "\n",
+    "# we need to compare the data that we can see in the data.head() to their datatype so that we can see\n",
+    "# if the expected data type is the same as the data type of the columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tripduration                 int64\n",
+       "starttime                   object\n",
+       "stoptime                    object\n",
+       "start station id             int64\n",
+       "start station name          object\n",
+       "start station latitude     float64\n",
+       "start station longitude    float64\n",
+       "end station id               int64\n",
+       "end station name            object\n",
+       "end station latitude       float64\n",
+       "end station longitude      float64\n",
+       "bikeid                       int64\n",
+       "usertype                    object\n",
+       "birth year                 float64\n",
+       "gender                       int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.dtypes"
    ]
@@ -116,13 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make sure that the date columns have the datetime data type\n",
     "data['starttime'] = pd.to_datetime(data['starttime'])\n",
-    "data['stoptime'] = pd.to_datetime(data['stoptime'])"
+    "data['stoptime'] = pd.to_datetime(data['stoptime'])\n",
+    "\n",
+    "# re-assign the entire column after transforming it"
    ]
   },
   {
