Update 04 - Feature Engineering.ipynb

--- a/04 - Feature Engineering.ipynb
+++ b/04 - Feature Engineering.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "4      1986.0       1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,17 +274,17 @@
        "dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.dtypes\n",
-    "\n",
     "# if you have dates in your data, it's important to convert them to a datetime object so that we can\n",
     "# do functions on them to extract information from them.\n",
     "\n",
+    "# NOTE: Always check the datatypes first!\n",
     "# we need to compare the data that we can see in the data.head() to their datatype so that we can see\n",
     "# if the expected data type is the same as the data type of the columns."
    ]
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,14 +357,56 @@
     "data['starttime'] = pd.to_datetime(data['starttime'])\n",
     "data['stoptime'] = pd.to_datetime(data['stoptime'])\n",
     "\n",
-    "# re-assign the entire column after transforming it"
+    "# -> re-assign the entire column after transforming it to a datetime object\n",
+    "# -> NOTE: If the datetime format is not the same for all of the obeservation, then it might not be\n",
+    "# able to detect the parts of the date and time (i.e., where is the year, month, etc.). This is why\n",
+    "# the format should be the same for all. \n",
+    "# -> You can also specify the string format of the datetime object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "pd.to_datetime?\n",
+    "\n",
+    "# -> If it meets a string that does not meet the format/default, then it will raise specific errors\n",
+    "# for specific situations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tripduration                        int64\n",
+       "starttime                  datetime64[ns]\n",
+       "stoptime                   datetime64[ns]\n",
+       "start station id                    int64\n",
+       "start station name                 object\n",
+       "start station latitude            float64\n",
+       "start station longitude           float64\n",
+       "end station id                      int64\n",
+       "end station name                   object\n",
+       "end station latitude              float64\n",
+       "end station longitude             float64\n",
+       "bikeid                              int64\n",
+       "usertype                           object\n",
+       "birth year                        float64\n",
+       "gender                              int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data.dtypes"
    ]
