Update 06 - Geospatial Data_inclass.ipynb

--- a/06 - Geospatial Data_inclass.ipynb
+++ b/06 - Geospatial Data_inclass.ipynb
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1981,10 +1981,13 @@
     "taxi.plot(ax=ax, color='white', edgecolor='dimgray')\n",
     "citi_gdf.plot(ax=ax, color='dodgerblue', alpha=0.35)\n",
     "ax.set_title('Citibike Stations NYC Taxi Zones', fontsize=15)\n",
-    "# ax.set_ylim([110000,280000])\n",
+    "# ax.set_ylim([110000,280000]) \n",
+    "# -> would show the bike zones in the new york taxi zone more clearly\n",
     "ax.axis('off');\n",
     "\n",
-    "# -> Now, the citibikes data are within the map of the taxi zone"
+    "# -> Now, the citibikes data are within the map of the taxi zone\n",
+    "# -> There's still a problem because there's a point far away and those\n",
+    "# that are not on the land. This can be solved by the spatial join"
    ]
   },
   {
