--- a/06 - Geospatial Data_inclass.ipynb
+++ b/06 - Geospatial Data_inclass.ipynb
@@ -3478,6 +3478,8 @@
     "# -> With this, we would see that there are no outliers anymore and \n",
     "# that it's already cleaned (no outliers).\n",
     "stations_within.plot(ax=ax, column='borough', alpha=0.35)\n",
+    "# -> Since column = 'borough', this would allow us to see the groupings per borough \n",
+    "# of the map\n",
     "ax.set_title('Citibike Stations on NYC Taxi Zones', fontsize=15)\n",
     "ax.axis('off');"
    ]
@@ -4586,7 +4588,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4600,7 +4602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
