Update 07 - Data Visualization.ipynb

--- a/07 - Data Visualization.ipynb
+++ b/07 - Data Visualization.ipynb
@@ -1536,6 +1536,8 @@
     "\n",
     "ax.bar(male.index, male, color='#009392', alpha=0.5, width=0.5)\n",
     "ax.bar(female.index, female, bottom=male, color='#d0587e', alpha=0.5, width=0.5)\n",
+    "# -> If we have another bar to put on top, the bottom is the one that changes:\n",
+    "# ax.bar(female.index, female, bottom=male+female, color='#d0587e', alpha=0.5, width=0.5)\n",
     "ax.set_xticks([0, 1])\n",
     "# ax.set_yticks(np.arange(0, 500, 20))\n",
     "ax.set_xticklabels(['Died', 'Survived']);\n",
