--- a/07 - Data Visualization.ipynb
+++ b/07 - Data Visualization.ipynb
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1446,7 @@
        "1            233   109"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,35 +1460,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "male = bygender['male']\n",
     "female = bygender['female']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Survived\n",
-       "0    468\n",
-       "1    109\n",
-       "Name: male, dtype: int64"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "male"
    ]
   },
   {
@@ -1500,12 +1477,35 @@
      "data": {
       "text/plain": [
        "Survived\n",
+       "0    468\n",
+       "1    109\n",
+       "Name: male, dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "male"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Survived\n",
        "0     81\n",
        "1    233\n",
        "Name: female, dtype: int64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1679,12 +1679,15 @@
     }
    ],
    "source": [
-    "109 / (109+233)"
+    "# -> We can also normalize the values. \n",
+    "\n",
+    "109 / (109+233)\n",
+    "# -> Percentage of surviving male passengers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1693,13 +1696,15 @@
        "0.6812865497076024"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "233 / (109+233)"
+    "233 / (109+233)\n",
+    "\n",
+    "# -> Percentage of surviving female passengers"
    ]
   },
   {
@@ -1744,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
